Aligned radio buttons correctly.

--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,5 @@ fieldset{
 
 fieldset:last-of-type{border-bottom: none;}
 input,textarea,select{width:100%;width:100%;margin-top: 10px;margin-bottom: 0px;margin-left: 0;margin-right: 0;}
+
+.inline{width:unset;}
